--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,61 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:theme="@style/TextAppearance.AppCompat.Large.Inverse"
+    tools:context=".MainActivity"
+    android:background="@drawable/start_background">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <LinearLayout
+        android:id="@+id/menuLayout"
+        android:layout_width="350dp"
+        android:layout_height="500dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
+        <TextView
+            android:id="@+id/titleText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:forceDarkAllowed="false"
+            android:text="@string/titleText"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="36sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/startButton"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:text="@string/start"
+            android:textColor="#000000"
+            android:textColorHighlight="#000000"
+            android:textIsSelectable="false"
+            android:textSize="24sp"
+            app:backgroundTint="#8B1EFDEA"
+            app:shapeAppearance="@style/Theme.FlyAirCraft" />
+
+        <Button
+            android:id="@+id/exitButton"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="@string/exit"
+            android:textColor="#000000"
+            android:textColorHighlight="#000000"
+            android:textIsSelectable="false"
+            android:textSize="24sp"
+            app:backgroundTint="#8B1EFDEA"
+            app:shapeAppearance="@style/Theme.FlyAirCraft"
+            android:layout_marginTop="70dp"
+            android:layout_gravity="center" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
